	PR c++/84798 - ICE with auto in abstract function declarator.

* parser.c (cp_parser_parameter_declaration_clause): Check
	parser->default_arg_ok_p.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@258493 138bc75d-0d04-0410-961f-82ee72b054a4